# BIODS253-Final-Project

./: .gitignore  .gitmodules  BIODS253_Final_Project.pptx  CMakeLists.txt  README.md  amgx_log_parser.py  build.sh  main.py  main_scipy.py  requirements.txt  run.sh  run_cpu.sh  run_custom_configs.sh  run_large.sh  submit_sherlock.sbatch  utils.py
SRC/: CMakeLists.txt
SRC/solver/: AMGXSolver.cpp  AMGXSolver.h  pyAMGXSolver.cpp
SRC/tests/: test_pyAMGXSolver.py  test_solver.cpp
matrix_tests/: matrices.csv  matrices_copy.csv  matrices_cpu.csv
matrix_tests/configs/: FGMRES_AGGREGATION.json  PCGF_F.json  PCGF_V.json  PCGF_W.json  PCG_AGGREGATION_JACOBI.json  PCG_BLOCK_JACOBI.json  PCG_DILU.json  PCG_F.json  PCG_GS.json  PCG_V.json  PCG_W.json  minjie.json  minjie_direct.json
matrix_tests/configs_cpu/: PCG_BLOCK_JACOBI_CPU.json  minjie_CPU.json
matrix_tests/output/: amgx_results.csv  amgx_results_cpu.csv  amgx_results_no_pin.csv
matrix_tests/plots/: matrix_test_results.csv
